# last-minute-tutor

./: .gitignore  0003-treue-durch-erdung-und-verifikation.md  0005-stack-js-player-python-pipeline-sqlite.md  BACKLOG.md  CONTEXT.md  OFFENE-PUNKTE.md  PRD.md  README.md  create-github-issues.sh  docker-compose.yml
.claude/: launch.json
docs/: DATEI-VERTRAG.md
docs/adrs/: 0001-wiederverwendbare-pipeline.md  0002-remote-only-modell.md  0004-werkzeugkette-extraktion.md  0006-fensteradaptiver-wiederholungsplan.md  0007-lexikalisches-retrieval-tutormodus.md
pipeline/: Dockerfile  Dockerfile.gpu  pyproject.toml
pipeline/lernpaket_pipeline/: __init__.py  chunks.py  cli.py  fortschritt.py  generierung.py  llm.py  pipeline.py  relevanz.py  themen.py  verifikation.py  vertrag.py  zielformat.py
pipeline/lernpaket_pipeline/extraktion/: audio.py  folien.py  formeln.py  pdf.py
pipeline/tests/: conftest.py  pdf_helfer.py  test_folien.py  test_formeln.py  test_fortschritt.py  test_generierung_und_verifikation.py  test_optionalquellen_und_ende_zu_ende.py  test_pdf_extraktion.py  test_quellenlage_und_llm_auswahl.py  test_themen_und_zielformat.py  test_transkript_und_relevanz.py  test_vertrag.py
player/: package-lock.json  package.json
player/public/: app.js  index.html  style.css
player/server/: adaptiv.js  bm25.js  db.js  index.js  lernpakete.js  plan.js  tutor.js
player/tests/: adaptiv.test.js  api.test.js  db.test.js  lernpakete.test.js  plan.test.js  tutor.test.js
