[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lernpaket-pipeline"
version = "0.2.0"
description = "Aufbereitung: erzeugt pro Modul ein Lernpaket aus den Rohmaterialien"
requires-python = ">=3.9"
dependencies = ["pypdf>=4", "pdfminer.six>=20231228"]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Schwere Extraktionswerkzeuge sind bewusst optional (ADR 0004: Werkzeuge austauschbar).
# Ohne sie laufen die jeweiligen Adapter nicht, die Pipeline degradiert kontrolliert.
# PyMuPDF rendert die Scan-Seiten pip-only (kein poppler); ffmpeg bringen av/opencv
# als Bibliothek mit — die OCR-Engine tesseract bleibt die einzige System-Abhängigkeit.
asr = ["faster-whisper>=1.0"]
# OpenCV explizit: in scenedetect 0.7 ist es Kern-Dependency (kein [opencv]-Extra
# mehr), in 0.6 ein Extra — explizit gelistet klappt es versionsunabhängig.
folien = ["scenedetect>=0.6", "opencv-python>=4.6"]
ocr = ["pytesseract>=0.3", "pymupdf>=1.24", "pillow>=10"]
# Marker unterstützt erst ab Python 3.10 — Marker-Extra entsprechend markieren,
# damit die 3.9-Umgebung auflösbar bleibt (Marker ist ein optionales Backend).
marker = ["marker-pdf>=1.0; python_version >= '3.10'"]

[project.scripts]
lernpaket = "lernpaket_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["lernpaket_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
